--- a/style.css
+++ b/style.css
@@ -460,10 +460,65 @@ label {
   
   @media (min-width: 768px) and (max-width: 1024px) {
     
-    
-    
+    .firstNav{
+        width: 5% !important;
+        background-color: #5B022E; 
+        border-bottom: 1px solid #fff;
+    }
+    .secondSideNav{
+         width: 5% !important;
+        background-color: #5B022E; 
+    }
+    .secondNav{
+        width: 95% !important;
+        background-color: #fff;
+    }
+    .mainContent{
+        width: 95% !important;
+        height: 100vh;
+    }
+    #viewRole{
+        position: absolute;
+    top: 700px;
+    }
+    .mainContent {
+        width: 95% !important;
+        height: 134vh;
+    }
+    #formtesting{
+        position: absolute;
+    top: 300px
+    }
   }
   
+  @media (min-width: 360px) and (max-width: 700px){
+    .firstNav{
+        width: 10% !important;
+        background-color: #5B022E; 
+        border-bottom: 1px solid #fff;
+    }
+    .secondSideNav{
+         width: 10% !important;
+        background-color: #5B022E; 
+    }
+    .secondNav{
+        width: 90% !important;
+        background-color: #fff;
+    }
+    .mainContent{
+        width: 90% !important;
+        height: 100vh;
+    }
+    #formtesting{
+        position: absolute;
+    top: 300px;
+    }
+    #viewRole{
+        position: absolute;
+    top: 650px;
+    }
+  }
+
   /* 
     ##Device = Tablets, Ipads (landscape)
     ##Screen = B/w 768px to 1024px
@@ -475,4 +530,4 @@ label {
     
   }
   
-  /* 
+  
